[package]
name = "git2p"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cliclack = "0.3.6"
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.53.2", features = ["full"] }
chrono = "0.4.41"
serde = "1.0.219"
serde_json = "1.0.141"
sha1 = "0.10.6"
notify = "8.1.0"
